--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 *{
     font-family: 'Courier New', Courier, monospace;
     font-size: 12px;
+}
 
+h1{
+    color: white;
+    font-size: 2.5rem;
+    margin-top: 25px;
+    font-weight: lighter;
 }
 
 body {
     margin: 0px;
     padding: 0px;
     background: #131212;
+    text-align: center;
 }
 
-#title {
-    fill: white;
-    font-size: 2rem;
+svg{
+    box-shadow: 2.5px 2.5px 5px #000000;
+    background: #1d1b1b;
 }
 
 #x-axis path, #y-axis path, #x-axis line, #y-axis line{
@@ -38,5 +45,17 @@ rect:hover{
 
 #source {
     color: white;
-    margin: 25px 0 0 75px;
+    margin: 10px 0 0 75px;
+    text-align: left;
 }
+
+div#tooltip {
+    position: absolute;
+    left: 250px;
+    top: 200px;
+    text-align: left;
+    padding: 15px;
+    font-size: 18px;
+    color: #67e1ff;
+    pointer-events: none;
+  }
