--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     font-size: 12px;
 }
 
+#container {
+    position: relative;
+}
+
 h1{
     color: white;
     font-size: 2.5rem;
@@ -46,13 +50,13 @@ rect:hover{
 #source {
     color: white;
     margin: 10px 0 0 75px;
-    text-align: left;
+    text-align: center;
 }
 
 div#tooltip {
     position: absolute;
     left: 250px;
-    top: 200px;
+    top: 100px;
     text-align: left;
     padding: 15px;
     font-size: 18px;
