--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 *{
     font-family: 'Courier New', Courier, monospace;
-    font-size: 12px;
+    text-align: center;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    height: 100vh;
+    background: #131212;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 25px;
+
 }
 
 #container {
@@ -9,16 +22,8 @@
 
 h1{
     color: white;
-    font-size: 2.5rem;
-    margin-top: 25px;
+    font-size: 2rem;
     font-weight: lighter;
-}
-
-body {
-    margin: 0px;
-    padding: 0px;
-    background: #131212;
-    text-align: center;
 }
 
 svg{
@@ -44,22 +49,23 @@ rect:hover{
 
 .axis-label{
     fill: white;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 #source {
     color: white;
     margin: 10px 0 0 75px;
     text-align: center;
+    
 }
 
-div#tooltip {
+
+#tooltip {
     position: absolute;
     left: 250px;
     top: 100px;
     text-align: left;
-    padding: 15px;
-    font-size: 18px;
+    font-size: 2rem;
     color: #67e1ff;
     pointer-events: none;
   }
